# sort-bench-hs

./: .gitignore  CHANGELOG.md  index.html  sort-bench-hs.cabal
app/: DListVsReverseCons.hs  Main.hs  OtherSorts.hs
sorton-sortwith/: index.html
src/Sorts/: InsertionSort.hs  MergeSortBottomUp.hs  MergeSortBottomUpBalanced.hs  MergeSortBottomUpDList.hs  MergeSortTopDown.hs  MergeSortTopDownAlternating.hs  MergeSortTopDownWithVec.hs  PrimMergeSort.hs  PrimSort.hs  PrimSpinSort.hs  QuickSort.hs  ShakerSort.hs  VectorSort.hs
test/: Main.hs
