cabal-version:      3.0
name:               sort-bench-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sort-bench-hs
    import:           warnings
    main-is:          Main.hs
    other-modules:    OtherSorts
    -- other-extensions:
    build-depends:    base >= 4.8.0.0 && < 5
                    , criterion
                    , vector
                    , deepseq
    hs-source-dirs:   app
    default-language: Haskell2010
