cabal-version:      3.0
name:               sort-bench-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common commons
    ghc-options: -Wall -Wextra
    default-language: Haskell2010

library
    import:           commons
    exposed-modules:  Sorts.MergeSortTopDown
                    , Sorts.MergeSortTopDownWithVec
                    , Sorts.MergeSortBottomUp
                    , Sorts.VectorSort
    build-depends:    base >= 4.8.0.0 && < 5
                    , vector
                    , vector-algorithms
                    , primitive-sort
    hs-source-dirs:   src

executable bench
    import:           commons
    main-is:          Main.hs
    other-modules:    OtherSorts
    -- other-extensions:
    build-depends:    base >= 4.8.0.0 && < 5
                    , criterion
                    , deepseq
                    , sort-bench-hs
    hs-source-dirs:   app
