cabal-version:      3.0
name:               sort-bench-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common commons
    ghc-options: -Wall -Wextra
    default-language: Haskell2010

library
    import:           commons
    exposed-modules:  Sorts.MergeSortTopDown
    exposed-modules:  Sorts.MergeSortTopDownAlternating
                    , Sorts.MergeSortTopDownWithVec
                    , Sorts.MergeSortBottomUp
                    , Sorts.MergeSortBottomUpBalanced
                    , Sorts.MergeSortBottomUpDList
                    , Sorts.VectorSort
                    , Sorts.PrimMergeSort
                    , Sorts.QuickSort
                    , Sorts.InsertionSort
    build-depends:    base >= 4.8.0.0 && < 5
                    , vector
                    , vector-algorithms
                    , primitive
    hs-source-dirs:   src

executable bench
    import:           commons
    main-is:          Main.hs
    other-modules:    OtherSorts
    -- other-extensions:
    build-depends:    base >= 4.8.0.0 && < 5
                    , criterion
                    , deepseq
                    , sort-bench-hs
                    , MonadRandom
    hs-source-dirs:   app

executable bench-list-append
    import:           commons
    main-is:          DListVsReverseCons.hs
    -- other-extensions:
    build-depends:    base >= 4.8.0.0 && < 5
                    , criterion
    hs-source-dirs:   app

test-suite tests
  import:             commons
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:      base >= 4.8.0.0 && < 5
                    , QuickCheck
                    , sort-bench-hs
